--- a/core/dplugins/generic/tools/htmlgallery/themes/bluecurved/bluecurved.desktop
+++ b/core/dplugins/generic/tools/htmlgallery/themes/bluecurved/bluecurved.desktop
@@ -172,7 +172,7 @@ Name[tr]=Galeri Tanıtımı
 Name[uk]=Вступ до галереї
 Name[x-test]=xxGallery Introductionxx
 Name[zh_CN]=相册介绍
-Type=string
+Type=caption
 Default=Title of my web gallery
 
 
