--- a/core/tests/imgqsort/CMakeLists.txt
+++ b/core/tests/imgqsort/CMakeLists.txt
@@ -76,6 +76,8 @@ macro(IMGQSORT_BUILD_UNITTEST)
 
 endmacro()
 
+IMGQSORT_BUILD_UNITTEST(detectgeneral_badimage_utest.cpp)
+IMGQSORT_BUILD_UNITTEST(detectgeneral_goodimage_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectgeneral_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectnoise_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectblur_utest.cpp)
