Add 2 new classes to host spell check settings CCBUGS: 376345

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -11,6 +11,8 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/modelcompleter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/searchtextbar.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/dtextedit.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/spellchecksettings.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/spellcheckcontainer.cpp
 )
 
 set(liblayouttools_SRCS
