Introduce Spell Check settings configuration view in digiKam Setup/Miscs. The view only host the single option to turn on/off the spell-checking in background. All text edit widget supported spell-checking are affected by this change without to re-start application. More options/info about spell-checking will be hosted in this view. This view will be also appended to Showfoto/Setup later to be homogeneous. CCBUGS: 376345

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -13,6 +13,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/dtextedit.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/spellchecksettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/spellcheckcontainer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/spellcheckconfig.cpp
 )
 
 set(liblayouttools_SRCS
