Introduce class to perform on-line translation of text using web services.

--- a/core/tests/miscs/CMakeLists.txt
+++ b/core/tests/miscs/CMakeLists.txt
@@ -48,6 +48,18 @@ target_link_libraries(onlinedownload_cli
 
 # -----------------------------------------------------------------
 
+set(onlinetranslator_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/onlinetranslator_cli.cpp)
+add_executable(onlinetranslator_cli ${onlinetranslator_cli_SRCS})
+
+target_link_libraries(onlinetranslator_cli
+
+                      digikamcore
+
+                      ${COMMON_TEST_LINK}
+)
+
+# -----------------------------------------------------------------
+
 set(solidhardware_gui_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/solidhardware_gui.cpp)
 add_executable(solidhardware_gui ${solidhardware_gui_SRCS})
 
