comment  aesthetic utest

--- a/core/tests/imgqsort/CMakeLists.txt
+++ b/core/tests/imgqsort/CMakeLists.txt
@@ -85,15 +85,15 @@ IMGQSORT_BUILD_UNITTEST(detectcompression_utest.cpp)
 
 # --------------------------------------------------------------
 
-set(_filename NIMA_inference_cli.cpp)
-string(REPLACE "." ";" _temp ${_filename})
-list(GET _temp 0 _target)
+# set(_filename NIMA_inference_cli.cpp)
+# string(REPLACE "." ";" _temp ${_filename})
+# list(GET _temp 0 _target)
 
-set(${_target}_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${_filename})
+# set(${_target}_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${_filename})
 
-add_executable(${_target} ${${_target}_SRCS})
+# add_executable(${_target} ${${_target}_SRCS})
 
-target_link_libraries(${_target}
-                        digikamcore
-                        ${COMMON_TEST_LINK}
-)
+# target_link_libraries(${_target}
+#                         digikamcore
+#                         ${COMMON_TEST_LINK}
+# )
