--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -16,6 +16,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/spellcheckconfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/localizeconfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_google.cpp
 )
 
 set(liblayouttools_SRCS
