separate conversion tables implementations

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -17,6 +17,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/localizeconfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_google.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_tables.cpp
 )
 
 set(liblayouttools_SRCS
