--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -18,6 +18,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_google.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_tables.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_yandex.cpp
 )
 
 set(liblayouttools_SRCS
