separate LibreTranslate methods

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -20,6 +20,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_tables.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_yandex.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_bing.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_libretr.cpp
 )
 
 set(liblayouttools_SRCS
