--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -21,6 +21,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_yandex.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_bing.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_libretr.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_lingva.cpp
 )
 
 set(liblayouttools_SRCS
