Add online TTS support for later, if we found a way to play urls with QtAV

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -24,6 +24,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_libretr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_lingva.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_properties.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/donlinetranslator_tts.cpp
 )
 
 set(liblayouttools_SRCS
