--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -11,6 +11,7 @@ set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/modelcompleter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/searchtextbar.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/dtextedit.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/dtextedit_p.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/localizesettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/localizecontainer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/localizeconfig.cpp
