--- a/core/tests/imgqsort/CMakeLists.txt
+++ b/core/tests/imgqsort/CMakeLists.txt
@@ -84,7 +84,7 @@ IMGQSORT_BUILD_UNITTEST(detectnoise_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectblur_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectexposure_utest.cpp)
 IMGQSORT_BUILD_UNITTEST(detectcompression_utest.cpp)
-IMGQSORT_BUILD_UNITTEST(detectaesthetic_utest.cpp)
+# IMGQSORT_BUILD_UNITTEST(detectaesthetic_utest.cpp)
 
 # --------------------------------------------------------------
 
