introduce a global QNetworkAccessManager To reduce the number of running QNetworkAccessManagers. The online translator now uses a connection to the parsing QState to set the returned QNetworkReply as proberty.

--- a/core/libs/CMakeLists.txt
+++ b/core/libs/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(properties)
 add_subdirectory(progressmanager)
 add_subdirectory(threads)
 add_subdirectory(versionmanager)
+add_subdirectory(networkmanager)
 add_subdirectory(notificationmanager)
 add_subdirectory(models)
 add_subdirectory(onlineversion)
