Add translate BQM tool in the list of plugin which do not restore digiKam properties at end of task. Enable BQM translate tool in compilation rules

--- a/core/dplugins/bqm/metadata/CMakeLists.txt
+++ b/core/dplugins/bqm/metadata/CMakeLists.txt
@@ -7,4 +7,4 @@
 add_subdirectory(assigntemplate)
 add_subdirectory(removemetadata)
 add_subdirectory(timeadjust)
-#add_subdirectory(translate)
+add_subdirectory(translate)
