--- a/core/dplugins/generic/tools/wallpaper/CMakeLists.txt
+++ b/core/dplugins/generic/tools/wallpaper/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2019      by Igor Antropov <antropovi at yahoo dot com>
+# SPDX-FileCopyrightText: 2019      by Igor Antropov <antropovi at yahoo dot com>
 # SPDX-FileCopyrightText: 2019-2022 by Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # SPDX-License-Identifier: BSD-3-Clause
