--- a/core/dplugins/generic/view/slideshow/CMakeLists.txt
+++ b/core/dplugins/generic/view/slideshow/CMakeLists.txt
@@ -1,6 +1,6 @@
 #
 # SPDX-FileCopyrightText: 2010-2022, Gilles Caulier, <caulier dot gilles at gmail dot com>
-# Copyright (C) 2020     , Minh Nghia Duong <minhnghiaduong997 at gmail dot com>
+# SPDX-FileCopyrightText: 2020     , Minh Nghia Duong <minhnghiaduong997 at gmail dot com>
 
 # SPDX-License-Identifier: BSD-3-Clause
 #
