--- a/core/dplugins/generic/webservices/filecopy/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/filecopy/CMakeLists.txt
@@ -1,6 +1,6 @@
 #
-# Copyright (C) 2010-2022 by Gilles Caulier, <caulier dot gilles at gmail dot com>
-# Copyright (C) 2019      by Maik Qualmann, <metzpinguin at gmail dot com>
+# SPDX-FileCopyrightText: 2010-2022 by Gilles Caulier, <caulier dot gilles at gmail dot com>
+# SPDX-FileCopyrightText: 2019      by Maik Qualmann, <metzpinguin at gmail dot com>
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
