--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2020-2022 Gilles Cauliere <caulier dot gilles at gmail dot com>
+# SPDX-FileCopyrightText: 2020-2022 Gilles Caulier <caulier dot gilles at gmail dot com>
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
