move Image Quality Sorting code outside DImg API, for a better visibility

--- a/core/libs/CMakeLists.txt
+++ b/core/libs/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(dngwriter)
 add_subdirectory(dtrash)
 add_subdirectory(facesengine)
 add_subdirectory(iojobs)
+add_subdirectory(imgqsort)
 add_subdirectory(jpegutils)
 add_subdirectory(pgfutils)
 add_subdirectory(threadimageio)
