--- a/core/libs/imgqsort/CMakeLists.txt
+++ b/core/libs/imgqsort/CMakeLists.txt
@@ -12,6 +12,7 @@ kde_enable_exceptions()
 set(libimgqsort_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/imagequalitycontainer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imagequalitysettings.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/imagequalityconfselector.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imagequalityparser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imagequalitycalculator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/imagequalitythread.cpp
