First version ready to use of Image Quality Sorting BQM tool

--- a/core/dplugins/bqm/metadata/CMakeLists.txt
+++ b/core/dplugins/bqm/metadata/CMakeLists.txt
@@ -5,7 +5,7 @@
 #
 
 add_subdirectory(assigntemplate)
-#add_subdirectory(qualitysort)
+add_subdirectory(qualitysort)
 add_subdirectory(removemetadata)
 add_subdirectory(timeadjust)
 add_subdirectory(translate)
