add new BAtch Queue Manager tool to assign Rating, Color label, and Pick label to items. CCBUGS: 245221

--- a/core/dplugins/bqm/metadata/CMakeLists.txt
+++ b/core/dplugins/bqm/metadata/CMakeLists.txt
@@ -4,6 +4,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 #
 
+add_subdirectory(assignlabels)
 add_subdirectory(assigntemplate)
 add_subdirectory(qualitysort)
 add_subdirectory(removemetadata)
