--- a/core/libs/properties/CMakeLists.txt
+++ b/core/libs/properties/CMakeLists.txt
@@ -62,6 +62,7 @@ set(libitempropertiesdigikam_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/import/importitempropertiestab.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/captions/itemdescedittab.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/captions/itemdescedittab_p.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/captions/itemdescedittab_tags.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/captions/disjointmetadata.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/captions/disjointmetadata_p.cpp
 )
