--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# Ignore external repository dirs
+doc
+test-data
 
 # Ignore unit-test files
 tests/databases/*/*.db
 core/tests/facesengine/data/
+Testing/
 
 # Ignore packaging dirs
 doc/digikam
@@ -33,7 +37,7 @@ __pycache__
 *.egg-info
 
 # Ignore build files
-build
+build*
 qtcreator-build
 build_dir
 .flatpak-builder
