--- a/project/bundles/3rdparty/ext_heif/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_heif/CMakeLists.txt
@@ -51,7 +51,7 @@ elseif(APPLE)
 
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
         GIT_REPOSITORY https://github.com/strukturag/libheif.git
-#        GIT_TAG v1.12.0
+        GIT_TAG v1.13.0
 
         PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/heif-lib-only.patch
 
