only checkout unit-tests data repository if BUILD_TESTING option is enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,11 +295,19 @@ if(DIGIKAMSC_COMPILE_DOC)
     ECM_OPTIONAL_ADD_SUBDIRECTORY(doc-translated)
 endif()
 
-# Some unit tests require data from the external "Digikam Test Data" git repository.
-# Developers may choose to obtain the data using the "download-repos" script prior to running cmake.
-# For CI runners to run tests, the following custom target serves to perform the download automatically.
-# If the directory "test-data" has already been created, the target becomes a "no-op".
-#
-add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/test-data 
-    COMMAND git ARGS clone https://invent.kde.org/graphics/digikam-test-data.git ${CMAKE_SOURCE_DIR}/test-data)
-add_custom_target(test-data ALL DEPENDS ${CMAKE_SOURCE_DIR}/test-data)
+if(BUILD_TESTING)
+
+    # Some unit tests require data from the external "Digikam Test Data" git repository.
+    # https://invent.kde.org/graphics/digikam-test-data
+    #
+    # Developers may choose to obtain the data using the "download-repos" script prior to running cmake.
+    # For CI runners to run tests, the following custom target serves to perform the download automatically.
+    # If the directory "test-data" has already been created, the target becomes a "no-op".
+    #
+    add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/test-data 
+                       COMMENT "Checkout unit-test data repository. Please wait..."
+                       COMMAND git
+                       ARGS clone https://invent.kde.org/graphics/digikam-test-data.git ${CMAKE_SOURCE_DIR}/test-data)
+    add_custom_target(test-data ALL DEPENDS ${CMAKE_SOURCE_DIR}/test-data)
+
+endif()
