DMetadata unit-tests now use extra data git repository at run-time, as QtAV unit-tests.

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
 
 include_directories(${DK_LOCAL_INCLUDES}
                     ${DK_LOCAL_INCLUDES_UTILS}
+                    ${CMAKE_CURRENT_SOURCE_DIR}/
 )
 
 # -------------------------------------------------------------------------------
