convert this cli tool as unit-test

--- a/core/tests/fileio/CMakeLists.txt
+++ b/core/tests/fileio/CMakeLists.txt
@@ -61,18 +61,6 @@ target_link_libraries(qtpgftest_cli
 
 #------------------------------------------------------------------------
 
-set(loadpgfdata_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/loadpgfdata_cli.cpp ${pgfutils_SRCS})
-add_executable(loadpgfdata_cli ${loadpgfdata_cli_SRCS})
-ecm_mark_nongui_executable(loadpgfdata_cli)
-
-target_link_libraries(loadpgfdata_cli
-                      digikamcore
-
-                      ${COMMON_TEST_LINK}
-)
-
-#------------------------------------------------------------------------
-
 set(loadsavethread_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/loadsavethread_cli.cpp)
 add_executable(loadsavethread_cli ${loadsavethread_cli_SRCS})
 ecm_mark_nongui_executable(loadsavethread_cli)
@@ -81,6 +69,21 @@ target_link_libraries(loadsavethread_cli
                       digikamcore
 
                       ${COMMON_TEST_LINK}
+)
+
+#------------------------------------------------------------------------
+
+ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/loadpgfdata_utest.cpp
+
+              NAME_PREFIX
+
+              "digikam-"
+
+              LINK_LIBRARIES
+
+              digikamcore
+
+              ${COMMON_TEST_LINK}
 )
 
 #------------------------------------------------------------------------
