another tool ported as unit test

--- a/core/tests/fileio/CMakeLists.txt
+++ b/core/tests/fileio/CMakeLists.txt
@@ -37,18 +37,6 @@ endif()
 
 #------------------------------------------------------------------------
 
-set(pgfscaled_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/pgfscaled_cli.cpp ${pgfutils_SRCS})
-add_executable(pgfscaled_cli ${pgfscaled_cli_SRCS})
-ecm_mark_nongui_executable(pgfscaled_cli)
-
-target_link_libraries(pgfscaled_cli
-                      digikamcore
-
-                      ${COMMON_TEST_LINK}
-)
-
-#------------------------------------------------------------------------
-
 set(loadsavethread_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/loadsavethread_cli.cpp)
 add_executable(loadsavethread_cli ${loadsavethread_cli_SRCS})
 ecm_mark_nongui_executable(loadsavethread_cli)
@@ -77,6 +65,21 @@ ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/loadpgfdata_utest.cpp
 #------------------------------------------------------------------------
 
 ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/qtpgf_utest.cpp
+
+              NAME_PREFIX
+
+              "digikam-"
+
+              LINK_LIBRARIES
+
+              digikamcore
+
+              ${COMMON_TEST_LINK}
+)
+
+#------------------------------------------------------------------------
+
+ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/pgfscaled_utest.cpp
 
               NAME_PREFIX
 
