port as new unit test

--- a/core/tests/fileio/CMakeLists.txt
+++ b/core/tests/fileio/CMakeLists.txt
@@ -37,14 +37,17 @@ endif()
 
 #------------------------------------------------------------------------
 
-set(loadsavethread_cli_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/loadsavethread_cli.cpp)
-add_executable(loadsavethread_cli ${loadsavethread_cli_SRCS})
-ecm_mark_nongui_executable(loadsavethread_cli)
+ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/loadsavethread_utest.cpp
 
-target_link_libraries(loadsavethread_cli
-                      digikamcore
+              NAME_PREFIX
 
-                      ${COMMON_TEST_LINK}
+              "digikam-"
+
+              LINK_LIBRARIES
+
+              digikamcore
+
+              ${COMMON_TEST_LINK}
 )
 
 #------------------------------------------------------------------------
