--- a/core/data/database/mysql-global.conf
+++ b/core/data/database/mysql-global.conf
@@ -14,7 +14,7 @@
  # SPDX-FileCopyrightText: 2007-2013 by Marcel Wiesweg <marcel dot wiesweg at gmx dot de>
  # SPDX-FileCopyrightText: 2010-2018 by Gilles Caulier <caulier dot gilles at gmail dot com>
  #
- * SPDX-License-Identifier: GPL-2.0-or-later
+ # SPDX-License-Identifier: GPL-2.0-or-later
  #
  # ============================================================
 
