--- a/core/data/hotplug/digikam-opencamera.desktop.cmake.in
+++ b/core/data/hotplug/digikam-opencamera.desktop.cmake.in
@@ -2,6 +2,7 @@
 X-KDE-Solid-Predicate=[ [ StorageVolume.ignored == false AND StorageVolume.usage == 'FileSystem' ] OR Camera.supportedDrivers == 'gphoto' ]
 Type=Service
 Actions=open;
+X-KDE-AliasFor=org.kde.digikam
 
 [Desktop Action open]
 # %f gives StorageAccess.filePath, %d gives Block.device, %i gives UDI
