--- a/core/tests/metadataengine/exiftool/CMakeLists.txt
+++ b/core/tests/metadataengine/exiftool/CMakeLists.txt
@@ -1,6 +1,6 @@
 #
 # SPDX-FileCopyrightText: 2015,      by Veaceslav Munteanu, <veaceslav dot munteanu90 at gmail dot com>
-# SPDX-FileCopyrightText: 2010-2021, by Gilles Caulier, <caulier dot gilles at gmail dot com>
+# SPDX-FileCopyrightText: 2010-2022, by Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -8,6 +8,7 @@
 APPLY_COMMON_POLICIES()
 
 include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Test,INTERFACE_INCLUDE_DIRECTORIES>
@@ -44,4 +45,5 @@ EXIFTOOL_BUILD_CLITEST(exiftoolformats_cli.cpp)
 EXIFTOOL_BUILD_CLITEST(exiftoollanguages_cli.cpp)
 EXIFTOOL_BUILD_CLITEST(exiftooltagsdb_cli.cpp)
 EXIFTOOL_BUILD_CLITEST(exiftoolversion_cli.cpp)
-EXIFTOOL_BUILD_CLITEST(exiftoolapplychanges_cli.cpp)
+
+METADATAENGINE_TESTS_BUILD(exiftoolapplychanges_utest.cpp)
