--- a/project/bundles/3rdparty/ext_drmingw/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_drmingw/CMakeLists.txt
@@ -15,14 +15,14 @@ ExternalProject_Add(ext_drmingw
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
     GIT_REPOSITORY https://github.com/jrfonseca/drmingw.git
-    GIT_TAG 0.9.4
+    GIT_TAG 0.9.8
 
     INSTALL_DIR ${EXTPREFIX_drmingw}
 
     PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/drmingw-coreonly.patch
 
-    CONFIGURE_COMMAND git submodule update --init &&
-                      cp ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
+#    CONFIGURE_COMMAND git submodule update --init &&
+    CONFIGURE_COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
                       <SOURCE_DIR>/bootstrap.mxe ${MXE_BUILDROOT} RelWithDebInfo -DBUILD_TESTING=OFF -DCMAKE_DISABLE_FIND_PACKAGE_PythonInterp=1 -DCMAKE_DISABLE_FIND_PACKAGE_WinDbg=1
 
     BUILD_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE)
@@ -39,8 +39,8 @@ ExternalProject_Add(ext_drmingw
 
 ExternalProject_Add(ext_drmingw_deps
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://github.com/jrfonseca/drmingw/releases/download/0.9.3/drmingw-0.9.3-win64.7z
-    URL_HASH MD5=f2a2e62a0214fe43525cf380d639b927
+    URL https://github.com/jrfonseca/drmingw/releases/download/0.9.8/drmingw-0.9.8-win64.7z
+    URL_HASH MD5=a72f81732204f49753a985e6ebfa31c1
 
     INSTALL_DIR ${PREFIX_ext_drmingw}
     CONFIGURE_COMMAND ""
