--- a/project/bundles/3rdparty/ext_flowview/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_flowview/CMakeLists.txt
@@ -8,12 +8,14 @@
 
 SET(PREFIX_ext_flowview "${EXTPREFIX}")
 
-if (MINGW)
+if(MINGW)
 
     ExternalProject_Add(ext_flowview
 
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
         GIT_REPOSITORY https://github.com/cathaysia/digikamflowplugin.git
+
+        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/fix-c++-rules.patch
 
         CONFIGURE_COMMAND git submodule update --init &&
                           cp ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
@@ -35,7 +37,8 @@ else() # MacOS and Linux
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
         GIT_REPOSITORY https://github.com/cathaysia/digikamflowplugin.git
 
-        PATCH_COMMAND git submodule update --init
+        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/fix-c++-rules.patch &&
+                      git submodule update --init
 
         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_flowview} -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
